refactor : 메인화면 모임목록 구조 수정